# cfs_system

crazyflie/config/: config_real.rviz  crazyflies.yaml  crazyflies_real.yaml  crazyflies_sitl.yaml  motion_capture.yaml  motion_capture_real.yaml  motion_capture_sitl.yaml  start_sitl_system.sh
crazyflie/launch/: launch.py  launch_real.py  launch_sitl.py
crazyflie/scripts/: gui.py  (+1 more)
crazyflie_examples/: setup.cfg
crazyflie_examples/config/: rviz2_custom_cfs.rviz
crazyflie_examples/crazyflie_examples/: cfs_1c_position_node.py  cfs_1c_waypoint.py  cfs_client_system.py  cfs_fifth_order_exec.py  cfs_groupmask_node.py  cfs_manager_node.py  cfs_multi_hexagon.py  cfs_obs_pub.py  cfs_pose_listener.py  cfs_pure_pursuit.py  cfs_root_real.py  cfs_server_system.py  cfs_stop.py  cfs_waypoints.py  generate_traj_client.py  helloworld_print.py  nice_hover.py  trajectory_client.py  visualize_trajectory.py  vrp_solver.py
crazyflie_examples/crazyflie_examples/data/: circle_trajectory_ros.csv  full_trajectory_ros.csv  resume_in_cf_0.csv  resume_in_cf_1.csv  resume_in_cf_3.csv  resume_out_cf_0.csv  resume_out_cf_1.csv  resume_out_cf_3.csv  route_vehicle_0.csv  route_vehicle_1.csv  route_vehicle_2.csv  route_vehicle_3.csv  square.csv  traj1.csv  traj_halfcircle_vehicle_1.csv  traj_square.csv  traj_vehicle_0.csv  traj_vehicle_1.csv  traj_vehicle_2.csv  traj_vehicle_3.csv
crazyflie_examples/crazyflie_examples/data/backup/: cfs_manager_node copy.py  vrp_solver copy.py
crazyflie_examples/crazyflie_examples/data/pillars_config/: coords.csv  demands_case1.csv  demands_case2.csv  demands_case3.csv
crazyflie_examples/launch/: StartSystem.py  StartSystem_real.py  StartSystem_sitl.py
crazyflie_interfaces/: CMakeLists.txt
(+3 files in other folders)
