[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    nice_hover = crazyflie_examples.nice_hover:main
    figure8 = crazyflie_examples.figure8:main
    group_mask = crazyflie_examples.group_mask:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
    swap = crazyflie_examples.swap:main
    infinite_flight = crazyflie_examples.infinite_flight:main
    arming = crazyflie_examples.arming:main
    cfs_1c_position_node = crazyflie_examples.cfs_1c_position_node:main
    cfs_1c_waypoint =  crazyflie_examples.cfs_1c_waypoint:main
    cfs_manager_node =  crazyflie_examples.cfs_manager_node:main
    cfs_waypoints = crazyflie_examples.cfs_waypoints:main
    cfs_groupmask_node = crazyflie_examples.cfs_groupmask_node:main
    helloworld_print = crazyflie_examples.helloworld_print:main
    visualize_trajectory = crazyflie_examples.visualize_trajectory:main
    cfs_pose_listener = crazyflie_examples.cfs_pose_listener:main
    cfs_client_system = crazyflie_examples.cfs_client_system:main
    cfs_server_system = crazyflie_examples.cfs_server_system:main
    cfs_fifth_order_exec = crazyflie_examples.cfs_fifth_order_exec:main
    cfs_pure_pursuit = crazyflie_examples.cfs_pure_pursuit:main
    cfs_multi_hexagon = crazyflie_examples.cfs_multi_hexagon:main
    cfs_root_real = crazyflie_examples.cfs_root_real:main
    cfs_obs_pub = crazyflie_examples.cfs_obs_pub:main

[options.package_data]
    crazyflie_examples = data/*.csv
